supplement/implementation/examples/positive/sendTreeExplicit.bgv
rec type TreeChannel = +{ leaf: Skip, node: !Int; TreeChannel; TreeChannel } in
let
    sendTree : TreeChannel -[m u 1]-> Unit
    sendTree c =
        if true then
            discard (select leaf c)
        else
            let c1 = select node c in
            let c2, c3 = lsplit !Int c1 in
            send @Int 42 c2;
            let c4, c5 = lsplit TreeChannel c3 in
            sendTree c4;
            sendTree c5
in
unit
